--- a/app/views/shared/_user_menu.html.erb
+++ b/app/views/shared/_user_menu.html.erb
@@ -7,7 +7,8 @@
       ]}) %>
   <%= render(:partial=>"utils/menu_item", :locals => {:name => '球队', 
       :links=>[
-        link_to("我参加的球队", user_team_joins_path(user))
+        link_to("我参加的球队", user_team_joins_path(user)),
+        link_to("新建球队", new_team_path)
       ]}) %>
   <%= render(:partial=>"utils/menu_item", :locals => {:name => '训练', 
       :links=>[
@@ -24,6 +25,10 @@
         link_to("邀请我加入的球队", team_join_invitations_path),
         link_to("我申请加入的球队", team_join_requests_path)]
     }) %>
+  <%= render(:partial=>"utils/menu_item", :locals => {:name => '设置', 
+      :links=>[
+        link_to("我的设置", edit_user_path(current_user))
+      ]}) %>
 <%else%>
   <%= render(:partial=>"utils/menu_item", :locals => {:name => '朋友', 
       :links=>[
