--- a/app/views/user_views/show.html.erb
+++ b/app/views/user_views/show.html.erb
@@ -13,53 +13,72 @@
 <div id="left_content">
 <div class="seperateLine"></div>
 
-<div class="tab_container" style="margin:10px 0 20px 0">
+<div class="tab_container" style="margin:10px 0 10px 0">
   <span class="tab_link" style="margin-left: 10px;">个人信息</span>
   <%if @user.is_playable%>
   <span class="tab_link">球员信息</span>
   <%end%>
   <%if logged_in? && @user.id != current_user.id %>
     <span style="margin:30px;">
-    <%= link_to(image_tag("sendMail.gif", :title=>"给#{@user.nickname}发信", :class=>"shortcut_icon"), 
+    <%= link_to(image_tag("sendMail.gif", :title=>"给他发信", :class=>"shortcut_icon"), 
       new_message_path(:to=>@user.id))%>
-    <%= link_to(image_tag("inviteFriend.gif", :title=>"不和他玩", :class=>"shortcut_icon"), 
+    <%= link_to(image_tag("breakUpFriendship.gif", :title=>"不和他玩", :class=>"shortcut_icon"), 
       friend_relation_path(0, :user_id=>@user.id),:method=>"delete") if current_user.is_my_friend?(@user) %>
-    <%= link_to(image_tag("inviteFriend.gif", :title=>"申请和#{@user.nickname}成为好友", :class=>"shortcut_icon"), 
+    <%= link_to(image_tag("inviteFriend.gif", :title=>"申请成为好友", :class=>"shortcut_icon"), 
       new_friend_invitation_path, :onclick=>'j("#senf_friend_invitation_div").dialog("open");return false') if !current_user.is_my_friend?(@user) %>
-    <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请#{@user.nickname}加入球队", :class=>"shortcut_icon"),
+    <%= link_to(image_tag("inviteIntoTeam.gif", :title=>"邀请加入球队", :class=>"shortcut_icon"),
       new_team_join_invitation_path(:user_id => @user.id)) %>
     </span>
   <%end%>
   <div class="tab">
-  <%= "<span>昵称: #{@user.nickname}</span><br/>" %>
   <%= "<span>所在地: #{@user.city_text}</span><br/>" unless @user.city_text.nil?%>
   <%= "<span>生日: #{@user.birthday_text}</span><br/>" unless @user.birthday_text.nil?%>
   <%= "<span>年龄: #{@user.age}</span><br/>" unless @user.age.nil?%>
+  <%= "<span>性别: #{@user.gender == 1 ? '男' : '女'}</span><br/>" unless @user.gender == 0%>
   <%= "<span>喜欢的球星: #{@user.favorite_star}</span><br/>" unless @user.favorite_star.blank?%>
   <%= "<span>喜欢的球队: #{@user.favorite_team}</span><br/>" unless @user.favorite_team.blank?%>
-  <%if !@user.summary.nil? && !@user.summary.blank?%>
+  <%= "<span>blog地址: <a href='http://#{@user.blog}' target='_blank'>#{h(@user.blog)}</a></span><br/>" unless @user.blog.blank?%>
+  <%if !@user.summary.blank?%>
       <span>自我介绍：</span>
       <p><%=simple_format auto_link(@user.summary, :urls)%></p>
   <%end%>
   </div>
   <%if @user.is_playable%>
   <div class="tab">
-    <%= "<span>身高: #{@user.height}cm</span><br/>" unless @user.height.nil?%>
-    <%= "<span>体重: #{@user.weight}kg</span><br/>" unless @user.weight.nil?%>
-    <%= "<span>惯用脚: #{fitfoot_text @user.fitfoot}</span><br/>" unless @user.fitfoot.nil?%>
-    <%= "<span>首选位置: #{position_text @user.premier_position}</span><br/>" unless @user.premier_position.nil?%>
-    <%= "<span>可以踢的位置: #{@user.positions.map {|p| position_text p.label}.join(', ')}</span><br/>" %>
+    <div style="float:left;position:relative">
+      <%= image_tag('small_field.jpg', :title=>"")%>
+      <%@user.positions_array.each do |p|%>
+        <%pos = small_position_icon_position p%>
+        <%= image_tag(p==@user.premier_position ? 'small_premier_position_icon.gif' : 'small_position_icon.gif',
+            :style=>"position:absolute;left:#{pos[0]}px;top:#{pos[1]}px;", :title=>position_text(p))%>
+      <%end%>
+    </div>
+    <div style="float:left;margin-left:20px;">
+      <br/>
+      <%= "<span>身高: #{@user.height}cm</span><br/>" unless @user.height.nil?%>
+      <%= "<span>体重: #{@user.weight}kg</span><br/>" unless @user.weight.nil?%>
+      <%= "<span>惯用脚: #{fitfoot_text @user.fitfoot}</span><br/>" unless @user.fitfoot.nil?%>
+      <br/><br/>
+      <%= image_tag('small_premier_position_icon.gif', :title=>"") %><span> 首选位置</span><br/>
+      <%= image_tag('small_position_icon.gif', :title=>"") %><span> 可以踢的位置</span>
+    </div>
+    <div class=" clearBoth"></div>
   </div>
   <%end%>
+  
+  <div style="margin: 10px 0 0 10px">
+    <%if logged_in? && @user.id != current_user.id %>
+    <%= link_to("给他写信", new_message_path(:to=>@user.id))%>
+    <%if current_user.is_my_friend?(@user)%>
+      <%= link_to("不和他玩", friend_relation_path(0, :user_id=>@user.id),:method=>"delete")  %>
+    <%else%>
+      <%= link_to("申请成为朋友", new_friend_invitation_path, 
+        :onclick=>'j("#senf_friend_invitation_div").dialog("open");return false') %>
+    <%end%>
+    <%= link_to("邀请加入球队", new_team_join_invitation_path(:user_id => @user.id)) %>
+    <%end%>
+  </div>
 </div>
-
-<%#if logged_in? && @user.id != current_user.id %>
-<%#= link_to("不和他玩", friend_relation_path(0, :user_id=>@user.id),:method=>"delete") if current_user.is_my_friend?(@user) %>
-<%#= link_to("给#{@user.nickname}发信", new_message_path(:to=>@user.id))%>
-<%#= link_to("申请和#{@user.nickname}成为好友", new_friend_invitation_path, 
-  :onclick=>'j("#senf_friend_invitation_div").dialog("open");return false') if !current_user.is_my_friend?(@user) %>
-<%#= link_to("邀请#{@user.nickname}加入球队", new_team_join_invitation_path(:user_id => @user.id)) %>
-<%#end%>
 
 
 <%if logged_in? && @user.id != current_user.id && !current_user.is_my_friend?(@user)%>
