--- a/app/views/calendar/show_a_day.html.erb
+++ b/app/views/calendar/show_a_day.html.erb
@@ -2,7 +2,7 @@
   <%= stylesheet_link_tag 'activityitem' %>
 <%end%>
 
-<h1><%= @title%></h1>
+<h1><%=h @title%></h1>
 <div id="wide_left_content">
 <div class="seperateLine" style="margin-bottom:20px"></div>
 <%= render(:partial => 'shared/training_list', :object => @trainings, :locals => {:display_team => @team_display})%>
