--- a/app/views/calendar/show_a_month.html.erb
+++ b/app/views/calendar/show_a_month.html.erb
@@ -3,7 +3,7 @@
 <%end%>
 
 
-<h1><%= @title%></h1>
+<h1><%=h @title%></h1>
 <div class="seperateLine"></div>
 <%= render(:partial => 'shared/calendar', 
     :locals => {:year => @date.year, :month => @date.month, :trainings => @calendar_trainings_hash})%>
