--- a/app/views/shared/_post_list.html.erb
+++ b/app/views/shared/_post_list.html.erb
@@ -1,9 +1,9 @@
-<table>
+<table class="list">
   <tr>
     <th>话题</th>
-    <th>作者</th>
-    <th>回复</th>
-    <th>最后回复</th>
+    <th style="width:50px">作者</th>
+    <th style="width:30px">回复</th>
+    <th style="width:120px; text-align:right">最后回复</th>
   </tr>
 
 <% for post in post_list %>
