--- a/app/views/football_grounds/edit.html.erb
+++ b/app/views/football_grounds/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>编辑球场资料</h1>
+<h1><%= h @title%></h1>
+<div class="seperateLine"></div>
 
 <%= error_messages_for :football_ground %>
 
@@ -6,7 +7,7 @@
   
 <p>
   <b>状态</b><br />
-  <%(@football_ground.status == 0 ? [["待审核", 0], ["正常", 1], ["停用", 2]] : [["正常", 1], ["停用", 2]]).each do |v| %>
+  <%(@football_ground.status == 0 ? [["待审核", 0], ["审核通过", 1], ["停用", 2]] : [["正常", 1], ["停用", 2]]).each do |v| %>
     <%= f.radio_button :status, v[1] %><%=v[0]%>
   <%end%>
 </p>
@@ -18,4 +19,4 @@
   </p>
 <% end %>
 
-<%= (button_to '删除', @football_ground, :confirm => 'Are you sure?', :method => :delete) if @football_ground.status == 0 %>
+<%= (button_to '删除', @football_ground, :confirm => '确定删除？', :method => :delete) if @football_ground.status == 0 %>
