--- a/app/views/layouts/football_ground_layout.html.erb
+++ b/app/views/layouts/football_ground_layout.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title><%=h @title ? @title : h(@user.nickname)%></title>
+  <title><%=h @title ? @title : '球场信息'%></title>
   <%= javascript_include_tag "jquery-1.2.3.min.js" %>
   <%= javascript_include_tag "application" %>
   <%= yield :javascript%>
@@ -14,17 +14,12 @@
 <body>
 <div id="main_content">
 <div id="header">
-  <%= link_to user_image_tag(@user), user_view_path(@user), :id=>"header_icon" %>
-  <%= link_to h(@user.nickname), user_view_path(@user), :id=>"header_name"%>
-
   <%= render(:partial => 'shared/header_setting')%>
-  <%= render(:partial => 'shared/user_menu', :locals => {:user => @user})%>
 </div>
 
 <div id="content">
 <%= yield  %>
 </div>
-
 </div>
 </body>
 </html>
