--- a/app/views/layouts/team_layout.html.erb
+++ b/app/views/layouts/team_layout.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title><%= @title ? @title : h(@team.name)%></title>
+  <title><%=h @title ? @title : h(@team.name)%></title>
   <%= javascript_include_tag "jquery-1.2.3.min.js" %>
   <%= javascript_include_tag "application" %>
   <%= yield :javascript%>
