--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,22 +1,10 @@
-<h1>Editing post</h1>
-
+<h1><%=h @title%></h1>
+<div class="seperateLine"></div>
 <%= error_messages_for :post%>
 
 <% form_for(@post) do |f| %>
+  <%= render :partial=>'form', :locals => {:f=>f } %>
   <p>
-    <b>标题</b><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <b>只有本队队友可见</b><br />
-    <%= f.check_box :is_private %>
-  </p>
-  <p>
-    <b>内容</b><br />
-    <%= f.text_area :content %>
-  </p>
-
-  <p>
-    <%= f.submit "更新" %>
+    <%= f.submit "修改" %>
   </p>
 <% end %>
