--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,21 @@
 <h1><%=h @post.title %></h1>
-
+<div id="wide_left_content">
+<div class="seperateLine"></div>
+<div style="margin-bottom:30px">
 <%= render(:partial => 'shared/post', :object => @post)%>
 
 <%= render(:partial => 'shared/post', :collection => @post.replies, :locals => {:parent => @post})%>
+</div>
 
 <%if @can_reply%>
+  <div class="seperateLine clearBoth"></div>
+  <h2>回复</h2>
   <%= error_messages_for :reply %>
   <% form_for :reply, :url => post_replies_path(@post) do |f| %>
-    <p>
-      <b>内容</b><br />
-      <%= f.text_area :content %>
-    </p>
-
-    <p>
-      <%= f.submit "提交" %>
-    </p>
+    <%= f.text_area :content, :rows=>10, :cols=>50 %>
+    <br/><br/>
+    <%= f.submit "提交" %>
   <% end %>
 <%end%>
+</div>
+<div class="clearBoth"></div>
