--- a/app/views/shared/_post.html.erb
+++ b/app/views/shared/_post.html.erb
@@ -1,20 +1,20 @@
-<div>
+<div style="padding:10px">
+<%=small_user_image_link(post.user, :style=>'float:left; margin:0 10px 10px 0;')%>
 
-<%=small_user_image_link(post.user)%>
-
-<%=h post.created_at.strftime('%Y-%m-%d %H:%M:%S')%>
-
-来自<%=link_to h(post.user.nickname), user_view_path(post.user.id) %>
+<span>
+<%=h post.created_at.strftime('%Y-%m-%d %H:%M:%S')%> 来自<%=link_to h(post.user.nickname), user_view_path(post.user.id) %>
+</span>
 <p>
-  <b>Content:</b>
   <%=simple_format auto_link(post.content, :urls) %>
 </p>
 
+<div style="float:right; margin-right:20px">
 <%if post.is_a?(Post)%>
-  <%= link_to '修改', edit_post_path(post) if post.can_be_modified_by?(current_user)%> |
+  <%= link_to '修改', edit_post_path(post) if post.can_be_modified_by?(current_user)%>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
   <%= link_to "删除", post_path(post.id), :method=>"delete" if post.can_be_destroyed_by?(current_user) %>
 <%elsif post.is_a?(Reply)%>
   <%= link_to "删除", post_reply_path(parent, post.id), :method=>"delete" if post.can_be_destroyed_by?(current_user) %>
 <%end%>
+</div>
 
 </div>
