--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -19,7 +19,7 @@
     <%= f.football_ground_select :football_ground_id, 
       @training.new_record? || @training.football_ground_id.nil?  ? 'city' : nil,
       @training.new_record? || @training.football_ground_id.nil? ? @team.city : nil%>    
-    <%= link_to "提交新场地", new_football_ground_path%>
+    <%= link_to "提交新场地", new_football_ground_path(:back_uri => request.request_uri)%>
   </p>
   <p class="location_text_input">
     <%= f.text_field :location, :value=> @training.football_ground_id.nil? ? @training.location : '' %> （如果场地不在列表中请在这里填写）
